fixed the alignment

--- a/src/JEE/JeeQuiz.css
+++ b/src/JEE/JeeQuiz.css
@@ -144,7 +144,7 @@
   background-color: #1ae832;
   border-radius: 100%;
   top: 50%;
-  left: 7px;
+  left: 4px;
   transform: translateY(-50%);
 }
 
